# ganrec

./: .coveragerc  .flake8  .gitattributes  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  _version.py  cyclegan_test.ipynb  cyclegan_test.py  cyclegan_test2.ipynb  datasets.py  dcgan_test.ipynb  ganrec.py  ganrec2.py  ganrec2_base.py  ganrec2_class.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tomo_sim_multi_methods.py  versioneer.py
.github/workflows/: pypi-publish.yml  python-app.yml
.ipynb_checkpoints/: dcgan_test-checkpoint.ipynb
backup_files/: ganrec2.py  ganrec2_base.py  ganrec2_class.py  tomo_sim_multi_methods.py
docs/source/: conf.py  index.rst  installation.rst  usage.rst
examples/: diffraction_ruipeng.ipynb  diffraction_ruipeng.py  ganrec2_example.py  ganrec_torch_test.py  gi_tomo_ganrec2.py  holography_example.py  holography_tf.ipynb  holography_tf.py  holography_torch.ipynb  holography_torch.py  phase_spider_20221020.py  recon_run_example.py  tensor_tomography_example.ipynb  tensor_tomography_example.py  tensor_tomography_tf.ipynb  tensor_tomography_tf.py  tensorrec_test.py  tf_dev.ipynb  tmp.json  tomo3d_test.py  tomo_3d_test.ipynb  tomo_ruipeng.py  tomography_example.ipynb  tomography_example.py  tomography_tf.ipynb  tomography_tf.py  tomography_torch.ipynb  tomography_torch.py  tomography_torch_example.ipynb
examples/logs/: events.out.tfevents.1716218931.eru.nsls2.bnl.gov.1984554.1
examples/test_data/: hologram_shepp.tiff  hologram_spider_hair.tiff  tooth.tiff
examples/test_results/: dcgan.py  phase_shepp  phase_shepp.tiff  recon_shale.tiff  recon_tooth  recon_tooth.tiff  shale_recon.tiff  spider_hair.tiff  tooth_recon.tiff
ganrec/: README.md  SSIM.md  __init__.py  _version.py  all_together.ipynb  before_recon.py  config.json  cos_sin.ipynb  ganrec1.py  ganrec2.py  ganrec_dataloader.py  metrics.csv  models.py  notes.md  prints.txt  propagators.py  reconstruction.py  spheres.ipynb  spider.ipynb  spider_hair.csv  spider_hair_fixed.csv  thephotographer.ipynb  utils.py  with_loader_class.ipynb  xanes_gan.py
ganrec/data/gan_phase/spider_for_recon/phase/: phase_149_0.01.tif
ganrec/data/ganrec/recon/proj_thomas_001_d150_000003/: final_absorption_iter_500.tif  final_phase_iter_500.tif
ganrec/data/retrieved/rawBin2/: final_absorption_iter_100.tif  final_absorption_iter_1000.tif  final_absorption_iter_300.tif  final_absorption_iter_500.tif  final_absorption_iter_7.tif  final_phase_iter_100.tif  final_phase_iter_1000.tif  final_phase_iter_300.tif  final_phase_iter_500.tif  final_phase_iter_7.tif
ganrec/tests/: __init__.py  diffraction_ruipeng.ipynb  diffraction_ruipeng.py  ganrec2_eample.py  ganrec2_example.ipynb  ganrec2_example.py  gi_tomo_star.py  phase_hanfei.py  phase_test.py  phase_yang.py  ptycho_ganrec_sim.ipynb  recon_run_example.py  shale_recon.tiff  tensor_tomography.ipynb  tensorrec_test.py  tooth_recon.tiff  xrf_andy.py
ganrectf/: __init__.py  _version.py  config.json  ganrec.py  ganrec2.py  ganrec_diffuser.py  ios.py  models.py  propagators.py  reconstructions.py  tfutils.py  utils.py
ganrectf/tests/: __init__.py
ganrectorch/: __init__.py  config.json  ganrec.py  ganrec_dataloader.py  gaussian.ipynb  gaussian.py  gaussian_blur.py  hetrogeneous.ipynb  hyper.ipynb  models.py  prints.txt  propagators.py  sami.ipynb  setup.py  sphere.ipynb  test.ipynb  utils.py  visualize.py
ganrectorch/examples/: spider_example.ipynb  spider_with_ganrec.py
simluations/: fresnel.py  sim_tf.ipynb  simulations.ipynb  tensor_tomography_sim.ipynb
